# safe-decoder-service

./: .dockerignore  .env.docker  .env.sample  .env.test  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-prod.txt  requirements.txt  run_tests.sh  setup.cfg
.github/workflows/: ci.yml  cla.yml
app/: __init__.py  cache.py  config.py  custom_logger.py  main.py  utils.py
app/commands/: command_cli.py  download_contract.py  register_commands.py  safe_contracts.py  styles.py
app/consumers/: queue_consumer.py
app/datasources/abis/: gnosis_protocol.py  maker_dao.py  safe.py
app/datasources/cache/: redis.py
app/datasources/db/: database.py  models.py  session_scope.py  utils.py
app/datasources/queue/: queue_provider.py
app/loggers/: safe_logger.py
app/routers/: about.py  admin.py  contracts.py  data_decoder.py  default.py  models.py
app/routers/mocks/: abi_mock.py
app/services/: abis.py  chain.py  contract.py  contract_metadata_service.py  data_decoder.py  events.py  pagination.py  safe_contracts_service.py
app/tests/: utils.py
app/tests/commands/: test_commands.py
app/tests/datasources/db/: db_async_conn.py  factory.py  test_migrations.py  test_model.py  test_models.py
app/tests/datasources/queue/: test_queue_provider.py
app/tests/db/: db_async_conn.py  factories.py  test_model.py
app/tests/mocks/: abi_mock.py  contract_metadata_mocks.py
app/tests/routers/: test_admin.py  test_admin_auth.py  test_contracts.py  test_data_decoder.py  test_default.py
app/tests/services/: mocks_data_decoder.py  mocks_multisend.py  test_abis.py  test_contract_metadata.py  test_contracts.py  test_data_decoder.py  test_events.py  test_safe_contracts_service.py
app/tests/workers/: test_tasks.py
app/utils/: abis.py
app/workers/: tasks.py
docker/web/: Dockerfile  run_web.sh
docker/web/dramatiq/worker/: run.sh
migrations/: env.py
migrations/versions/: 03d30b614dc0_rename_trusted_for_delegate_field.py  0da35e86b777_change_chain_id_to_bigint.py  148330712a84_timestamped_model.py  1737a3c2c89d_abi_json_not_null.py  428bcc6596d6_update_chain_id_field_to_bigint.py  5ede7bdac949_init.py  66c1eb4456de_add_index_for_abi_relevance_field.py  8d2eacb17707_default_sources.py  9912fd3fc9ce_init.py  a160a84ce491_proxy_implementation_address.py  a4f3b2c1d8e9_abi_hash_generated_sha256.py  b062e814dbea_add_index_for_created_field.py  c52699d26409_init.py  d0c5d72aa50b_init.py  e4e2e62601d2_nullable_contract_name.py  e5e94343c151_add_timezone_datetime_fields.py
requirements/: dev.txt  prod.txt
scripts/: db_profile.py  send_test_message_rabbitmq.py
