[project]
name = "safe-decoder-service"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "aio-pika==9.5.8",
    "alembic==1.17.2",
    "async-lru==2.0.5",
    "asyncpg==0.30.0",
    "dramatiq[redis,watch]==1.18.0",
    "fastapi-camelcase==2.0.0",
    "fastapi[all]==0.124.0",
    "gunicorn==23.0.0",
    "periodiq==0.13.0",
    "pydantic-settings==2.13.1",
    "redis[hiredis]==6.4.0",
    "safe-eth-py==7.17.1",
    "setuptools>=75.0.0,<82",
    "sqladmin[full]==0.22.0",
    "sqlmodel==0.0.27",
    "uvicorn-worker==0.4.0",
    "web3==7.14.0",
]

[dependency-groups]
dev = [
    "coverage",
    "coveralls",
    "faker",
    "freezegun",
    "httpx",
    "ipython",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-asyncio",
]

[tool.uv]
# Reject packages published less than 7 days ago to avoid supply-chain attacks
exclude-newer = "7 days"
compile-bytecode = true

[tool.ruff]
line-length = 88
target-version = "py313"
exclude = [
    ".tox", ".git", "*/migrations/*", "*/static/CACHE/*",
    "docs", "node_modules", "venv"
]

[tool.ruff.lint]
extend-select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = ["E501"]
flake8-bugbear.extend-immutable-calls = ["fastapi.Depends", "fastapi.params.Depends", "fastapi.Query", "fastapi.params.Query"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
known-third-party = ["py_eth_sig_utils", "safe", "fastapi", "pydantic"]
# src = ["src"]

[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[tool.coverage.run]
include = ["app/*"]
omit = ["test_*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  'if __name__ == "__main__":',
  "if settings.DEBUG",
  "^\\s*pass\\s*$",
]
