[project]
name = "safe-decoder-service"
dynamic = ["version"]
requires-python = ">=3.13"
dependencies = [
    "aio-pika==9.6.2",
    "alembic==1.18.4",
    "async-lru==2.3.0",
    "asyncpg==0.31.0",
    "dramatiq[redis,watch]==1.18.0",
    "fastapi-camelcase==2.0.0",
    "fastapi[all]==0.136.0",
    "gunicorn==25.3.0",
    "periodiq==0.14.0",
    "pydantic-settings==2.13.1",
    "redis[hiredis]==6.4.0",
    "safe-eth-py==7.21.0",
    "setuptools>=75.0.0,<82",
    "sqladmin[full]==0.24.0",
    "sqlmodel==0.0.38",
    "uvicorn-worker==0.4.0",
    "web3==7.15.0",
]

[dependency-groups]
dev = [
    "coverage",
    "coveralls",
    "faker",
    "freezegun",
    "httpx",
    "ipython",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "app/__init__.py"
pattern = 'VERSION = "(?P<version>[^"]+)"'

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
# Reject packages published less than 7 days ago to avoid supply-chain attacks
exclude-newer = "7 days"
exclude-newer-package = { safe-eth-py = false }
compile-bytecode = true

[tool.ruff]
line-length = 88
target-version = "py313"
exclude = [
    ".tox", ".git", "*/migrations/*", "*/static/CACHE/*",
    "docs", "node_modules", "venv"
]

[tool.ruff.lint]
extend-select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = ["E501"]
flake8-bugbear.extend-immutable-calls = ["fastapi.Depends", "fastapi.params.Depends", "fastapi.Query", "fastapi.params.Query"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
known-third-party = ["py_eth_sig_utils", "safe", "fastapi", "pydantic"]
# src = ["src"]

[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[tool.coverage.run]
include = ["app/*"]
omit = ["test_*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  'if __name__ == "__main__":',
  "if settings.DEBUG",
  "^\\s*pass\\s*$",
]
